src/test/deca/context/invalid/provided/class41.deca
class A{
    protected int x;
}
class B {
    int y;
}
{
    A a = new A();
    a.x;
}